syntax = "proto3";
package dns;
option go_package = "Dns/dns";

service DnsHandler {
    rpc GetDomain (stream inmessage) returns (stream response){}
    rpc CreateDomain (stream domcreate) returns (stream response) {}
    rpc DeleteDomain (stream dom) returns (stream response) {}
    rpc UpdateDomain (stream domUpdate) returns (stream response) {}
}

message domcreate{
    string ip = 1;
    string domname = 2;
}

message dom{
    string domname = 1;
}
message domUpdate{
    string oldDom = 1;
    string newDom = 2;
}

message inmessage{
    string domname = 1;
}

message response {
    string ip = 1;
}